--- a/.gitignore
+++ b/.gitignore
@@ -213,6 +213,9 @@ $RECYCLE.BIN/
 ### Linux ###
 *~
 
+# Setting for VSCode users
+.vscode
+
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
 
